Closed Bug 1429783 Opened 8 years ago Closed 8 years ago

Assertion failure: !mIsModule && !mAsync && !mDefer && !mExternal, at /builds/worker/workspace/build/src/dom/html/HTMLScriptElement.cpp:210

Categories

(Core :: DOM: Core & HTML, defect, P2)

59 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla59
Tracking Status
firefox-esr52 --- unaffected
firefox57 --- unaffected
firefox58 --- unaffected
firefox59 --- fixed

People

(Reporter: jkratzer, Assigned: jonco)

References

(Blocks 1 open bug)

Details

(Keywords: assertion, testcase)

Attachments

(2 files)

Attached file trigger.html
Testcase found while fuzzing mozilla-central rev e61c4485494e. OS|Linux|0.0.0 Linux 4.4.0-104-generic #127-Ubuntu SMP Mon Dec 11 12:16:42 UTC 2017 x86_64 CPU|amd64|family 6 model 78 stepping 3|1 GPU||| Crash|SIGSEGV|0x0|0 0|0|libxul.so|mozilla::dom::HTMLScriptElement::FreezeExecutionAttrs|hg:hg.mozilla.org/mozilla-central:dom/html/HTMLScriptElement.cpp:e61c4485494e|210|0x5 0|1|libxul.so|mozilla::dom::ScriptElement::MaybeProcessScript|hg:hg.mozilla.org/mozilla-central:dom/script/ScriptElement.cpp:e61c4485494e|130|0xc 0|2|libxul.so|mozilla::dom::HTMLScriptElement::BindToTree|hg:hg.mozilla.org/mozilla-central:dom/html/HTMLScriptElement.cpp:e61c4485494e|66|0xd 0|3|libxul.so|mozilla::dom::Element::BindToTree|hg:hg.mozilla.org/mozilla-central:dom/base/Element.cpp:e61c4485494e|1780|0x1a 0|4|libxul.so|nsGenericHTMLElement::BindToTree|hg:hg.mozilla.org/mozilla-central:dom/html/nsGenericHTMLElement.cpp:e61c4485494e|485|0x5 0|5|libxul.so|mozilla::dom::HTMLSharedElement::BindToTree|hg:hg.mozilla.org/mozilla-central:dom/html/HTMLSharedElement.cpp:e61c4485494e|237|0x5 0|6|libxul.so|mozilla::dom::Element::BindToTree|hg:hg.mozilla.org/mozilla-central:dom/base/Element.cpp:e61c4485494e|1780|0x1a 0|7|libxul.so|nsGenericHTMLElement::BindToTree|hg:hg.mozilla.org/mozilla-central:dom/html/nsGenericHTMLElement.cpp:e61c4485494e|485|0x5 0|8|libxul.so|mozilla::dom::HTMLSharedElement::BindToTree|hg:hg.mozilla.org/mozilla-central:dom/html/HTMLSharedElement.cpp:e61c4485494e|237|0x5 0|9|libxul.so|nsINode::doInsertChildAt|hg:hg.mozilla.org/mozilla-central:dom/base/nsINode.cpp:e61c4485494e|1627|0x19 0|10|libxul.so|nsINode::ReplaceOrInsertBefore|hg:hg.mozilla.org/mozilla-central:dom/base/nsINode.cpp:e61c4485494e|2537|0x1b 0|11|libxul.so|mozilla::dom::NodeBinding::replaceChild|hg:hg.mozilla.org/mozilla-central:dom/base/nsINode.h:e61c4485494e|1882|0x16 0|12|libxul.so|mozilla::dom::GenericBindingMethod|hg:hg.mozilla.org/mozilla-central:dom/bindings/BindingUtils.cpp:e61c4485494e|3042|0x9 0|13|libxul.so|js::CallJSNative|hg:hg.mozilla.org/mozilla-central:js/src/jscntxtinlines.h:e61c4485494e|291|0x6 0|14|libxul.so|js::InternalCallOrConstruct|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:e61c4485494e|473|0xf 0|15|libxul.so|InternalCall|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:e61c4485494e|522|0xd 0|16|libxul.so|Interpret|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:e61c4485494e|528|0xf 0|17|libxul.so|js::RunScript|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:e61c4485494e|423|0xb 0|18|libxul.so|js::ExecuteKernel|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:e61c4485494e|706|0x5 0|19|libxul.so|js::Execute|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:e61c4485494e|739|0x5 0|20|libxul.so|ExecuteScript|hg:hg.mozilla.org/mozilla-central:js/src/jsapi.cpp:e61c4485494e|4693|0x11 0|21|libxul.so|ExecuteScript|hg:hg.mozilla.org/mozilla-central:js/src/jsapi.cpp:e61c4485494e|4712|0x8 0|22|libxul.so|nsJSUtils::ExecutionContext::CompileAndExec|hg:hg.mozilla.org/mozilla-central:dom/base/nsJSUtils.cpp:e61c4485494e|266|0xc 0|23|libxul.so|mozilla::dom::ScriptLoader::EvaluateScript|hg:hg.mozilla.org/mozilla-central:dom/script/ScriptLoader.cpp:e61c4485494e|2233|0x12 0|24|libxul.so|mozilla::dom::ScriptLoader::ProcessRequest|hg:hg.mozilla.org/mozilla-central:dom/script/ScriptLoader.cpp:e61c4485494e|1876|0xb 0|25|libxul.so|mozilla::dom::ScriptLoader::ProcessScriptElement|hg:hg.mozilla.org/mozilla-central:dom/script/ScriptLoader.cpp:e61c4485494e|1574|0xf 0|26|libxul.so|mozilla::dom::ScriptElement::MaybeProcessScript|hg:hg.mozilla.org/mozilla-central:dom/script/ScriptElement.cpp:e61c4485494e|147|0x13 0|27|libxul.so|nsIScriptElement::AttemptToExecute|hg:hg.mozilla.org/mozilla-central:dom/script/nsIScriptElement.h:e61c4485494e|240|0x3 0|28|libxul.so|nsHtml5TreeOpExecutor::RunScript|hg:hg.mozilla.org/mozilla-central:parser/html/nsHtml5TreeOpExecutor.cpp:e61c4485494e|736|0x10 0|29|libxul.so|nsHtml5TreeOpExecutor::RunFlushLoop|hg:hg.mozilla.org/mozilla-central:parser/html/nsHtml5TreeOpExecutor.cpp:e61c4485494e|540|0x8 0|30|libxul.so|nsHtml5ExecutorFlusher::Run|hg:hg.mozilla.org/mozilla-central:parser/html/nsHtml5StreamParser.cpp:e61c4485494e|131|0x10 0|31|libxul.so|mozilla::SchedulerGroup::Runnable::Run|hg:hg.mozilla.org/mozilla-central:xpcom/threads/SchedulerGroup.cpp:e61c4485494e|395|0x1c 0|32|libxul.so|nsThread::ProcessNextEvent|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThread.cpp:e61c4485494e|1040|0x15 0|33|libxul.so|NS_ProcessNextEvent|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThreadUtils.cpp:e61c4485494e|517|0x11 0|34|libxul.so|mozilla::ipc::MessagePump::Run|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessagePump.cpp:e61c4485494e|97|0xa 0|35|libxul.so|MessageLoop::RunInternal|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:e61c4485494e|326|0x17 0|36|libxul.so|MessageLoop::Run|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:e61c4485494e|319|0x8 0|37|libxul.so|nsBaseAppShell::Run|hg:hg.mozilla.org/mozilla-central:widget/nsBaseAppShell.cpp:e61c4485494e|157|0xd 0|38|libxul.so|XRE_RunAppShell|hg:hg.mozilla.org/mozilla-central:toolkit/xre/nsEmbedFunctions.cpp:e61c4485494e|877|0x11 0|39|libxul.so|mozilla::ipc::MessagePumpForChildProcess::Run|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessagePump.cpp:e61c4485494e|269|0x5 0|40|libxul.so|MessageLoop::RunInternal|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:e61c4485494e|326|0x17 0|41|libxul.so|MessageLoop::Run|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:e61c4485494e|319|0x8 0|42|libxul.so|XRE_InitChildProcess|hg:hg.mozilla.org/mozilla-central:toolkit/xre/nsEmbedFunctions.cpp:e61c4485494e|703|0x8 0|43|firefox|content_process_main|hg:hg.mozilla.org/mozilla-central:ipc/contentproc/plugin-container.cpp:e61c4485494e|63|0x14 0|44|firefox|main|hg:hg.mozilla.org/mozilla-central:browser/app/nsBrowserApp.cpp:e61c4485494e|280|0x11 0|45|libc-2.23.so||||0x20830 0|46|firefox|MOZ_ReportAssertionFailure|hg:hg.mozilla.org/mozilla-central:mfbt/Assertions.h:e61c4485494e|165|0x5
Flags: in-testsuite?
Jon, it looks like this is related to Bug 1361369 landing?
Flags: needinfo?(jcoppeard)
Assignee: nobody → jcoppeard
Flags: needinfo?(jcoppeard)
Further to the changes in bug 1361369, I think we just need to reset the frozen state in nsIScriptElement::LoseParserInsertedness().
Attachment #8941916 - Flags: review?(bugs)
Comment on attachment 8941916 [details] [diff] [review] bug1429783-assertion-failure (mForceAsync is a bit weird, but not about this bug)
Attachment #8941916 - Flags: review?(bugs) → review+
Pushed by jcoppeard@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/019f0d0bd98d Reset frozen state in nsIScriptElement::LoseParserInsertedness() r=smaug
Priority: -- → P2
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
Flags: in-testsuite? → in-testsuite+
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: