Bug 1429783 - Reset frozen state in nsIScriptElement::LoseParserInsertedness() r=smaug